--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,16 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.IngressoFilmes" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorOnPrimary">@color/white</item>
+
+        <item name="android:windowBackground">@color/black_gray</item>
+        <item name="android:textColor">@color/white</item>
+
+        <item name="cardBackgroundColor">@color/light_gray</item>
+        <item name="titleTextColor">@color/white</item>
     </style>
 
     <style name="Theme.IngressoFilmes" parent="Base.Theme.IngressoFilmes" />
