--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="azure">#00A4FF</color>
     <color name="orange">#FE7500</color>
-    <color name="light_gray">#2A2A2A</color>
-    <color name="black_gray">#363636</color>
-
-    <color name="colorAccent">#363636</color>
-    <color name="colorPrimary">#363636</color>
-    <color name="colorPrimaryDark">#363636</color>
+    <color name="black_gray">#2A2A2A</color>
+    <color name="light_gray">#363636</color>
 </resources>
