--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,12 +19,23 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
+            <ImageView
+                android:src="@drawable/ingresso"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginHorizontal="8dp"
+                android:layout_gravity="center_horizontal"
+                />
+
             <TextView
-                android:textSize="22sp"
+                android:textSize="24sp"
+                android:fontFamily="@font/sour_gummy"
                 android:text="@string/app_name"
                 android:textAlignment="center"
-                android:layout_width="match_parent"
+                android:textColor="@color/orange"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
                 />
 
         </androidx.appcompat.widget.Toolbar>
