--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,14 @@
         tools:context=".MainActivity"
         android:id="@+id/main">
 
+        <include layout="@layout/loading"
+            android:visibility="visible"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="0dp"
@@ -45,6 +53,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:id="@+id/movies_list"
+            android:visibility="gone"
             tools:listitem="@layout/movie_item"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
