--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -111,7 +111,7 @@
                     android:padding="8dp"
                     android:textSize="12sp"
                     android:id="@+id/genre"
-                    android:shadowColor="@android:color/transparent"
+                    android:clickable="false"
                     android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -125,6 +125,7 @@
                     android:text="99min"
                     android:padding="8dp"
                     android:textSize="12sp"
+                    android:clickable="false"
                     android:id="@+id/duration"
                     android:textColor="@color/white"
                     android:layout_marginStart="8dp"
