--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -57,6 +57,7 @@
                     android:text="Movie Title"
                     android:layout_width="0dp"
                     android:paddingVertical="8dp"
+                    android:textColor="@color/white"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -67,6 +68,7 @@
                     android:id="@+id/premiere"
                     android:text="Estreia:"
                     android:textStyle="bold"
+                    android:textColor="@color/white"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/title"
@@ -78,6 +80,7 @@
                     android:text="99/99/9999"
                     android:layout_width="0dp"
                     android:paddingStart="8dp"
+                    android:textColor="@color/white"
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/title"
@@ -88,6 +91,7 @@
                     android:id="@+id/distributor"
                     android:text="Estúdio:"
                     android:textStyle="bold"
+                    android:textColor="@color/white"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     app:layout_constraintStart_toStartOf="@id/premiere"
@@ -100,6 +104,7 @@
                     android:text="Universal Pictures Brasil"
                     android:layout_width="0dp"
                     android:paddingStart="8dp"
+                    android:textColor="@color/white"
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/distributor"
