--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/card"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:cardCornerRadius="10dp"
