--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,56 +11,16 @@
         tools:context=".MainActivity"
         android:id="@+id/main">
 
-        <include layout="@layout/loading"
-            android:id="@+id/loading"
-            android:visibility="visible"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@color/light_gray"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <ImageView
-                android:src="@drawable/ingresso"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginHorizontal="8dp"
-                android:layout_gravity="center_horizontal"
-                />
-
-            <TextView
-                android:textSize="24sp"
-                android:fontFamily="@font/sour_gummy"
-                android:text="@string/app_name"
-                android:textAlignment="center"
-                android:textColor="@color/orange"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                />
-
-        </androidx.appcompat.widget.Toolbar>
-
-        <androidx.recyclerview.widget.RecyclerView
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/nav_host_fragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:id="@+id/movies_list"
-            android:visibility="gone"
-            tools:listitem="@layout/movie_item"
+            app:navGraph="@navigation/nav_graph"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintStart_toStartOf="parent"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
