--- a/app/src/main/res/layout/movie_details.xml
+++ b/app/src/main/res/layout/movie_details.xml
@@ -21,6 +21,7 @@
 
             <ImageView
                 android:id="@+id/poster"
+                android:scaleType="fitXY"
                 android:layout_width="200dp"
                 android:layout_height="250dp"
                 app:layout_constraintEnd_toEndOf="parent"
