--- a/app/src/main/res/layout/movie_details.xml
+++ b/app/src/main/res/layout/movie_details.xml
@@ -35,14 +35,16 @@
             android:id="@+id/movie_name"
             android:text="Nome do Filme"
             android:padding="8dp"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:textSize="22sp"
             android:gravity="center"
-            android:layout_width="200dp"
+            android:layout_width="0dp"
             android:textColor="@color/white"
             android:layout_height="wrap_content"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="@id/card"
             app:layout_constraintTop_toBottomOf="@id/card"
+            app:layout_constraintStart_toStartOf="@id/card"
             />
 
         <TextView
@@ -116,9 +118,57 @@
             android:layout_width="0dp"
             android:textColor="@color/white"
             android:layout_height="wrap_content"
+            app:layout_constraintVertical_bias="0"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintBottom_toTopOf="@id/director"
             app:layout_constraintTop_toBottomOf="@id/synopsis_label"
+            />
+
+        <TextView
+            android:text="Diretor: "
+            android:id="@+id/director"
+            android:textSize="15sp"
+            android:layout_width="0dp"
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="16dp"
+            android:textColor="@color/white"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/city"
+            app:layout_constraintTop_toBottomOf="@id/synopsis_text"
+            />
+
+        <TextView
+            android:text="Cidade: "
+            android:id="@+id/city"
+            android:textSize="15sp"
+            android:layout_width="0dp"
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="16dp"
+            android:textColor="@color/white"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/director"
+            app:layout_constraintBottom_toTopOf="@id/content_rating"
+            />
+
+        <TextView
+            android:text="Classificação indicativa: "
+            android:id="@+id/content_rating"
+            android:textSize="15sp"
+            android:layout_width="0dp"
+            android:paddingVertical="8dp"
+            android:paddingHorizontal="16dp"
+            android:textColor="@color/white"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/city"
+            app:layout_constraintBottom_toBottomOf="parent"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
