--- a/app/src/main/res/layout/movies_list.xml
+++ b/app/src/main/res/layout/movies_list.xml
@@ -48,7 +48,29 @@
                 android:layout_gravity="center_horizontal"
                 />
 
+            <ImageButton
+                android:id="@+id/search"
+                android:layout_gravity="end"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/light_gray"
+                android:src="@android:drawable/ic_menu_search"
+                />
+
         </androidx.appcompat.widget.Toolbar>
+
+        <EditText
+            android:id="@+id/search_text"
+            android:padding="8dp"
+            android:visibility="gone"
+            android:layout_width="0dp"
+            android:textColor="@color/white"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            />
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
@@ -59,7 +81,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintTop_toBottomOf="@id/search_text"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             />
 
