--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -114,32 +114,51 @@
 
                 <com.google.android.material.chip.Chip
                     android:text="Drama"
-                    android:padding="8dp"
-                    android:textSize="12sp"
+                    android:textSize="11sp"
                     android:id="@+id/genre"
                     android:clickable="false"
                     android:textColor="@color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/azure"
+                    app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/duration"
+                    app:layout_constraintHorizontal_chainStyle="packed"
                     app:layout_constraintStart_toStartOf="@id/distributor"
                     app:layout_constraintTop_toBottomOf="@id/distributor_name"
                     />
 
                 <com.google.android.material.chip.Chip
                     android:text="99min"
-                    android:padding="8dp"
-                    android:textSize="12sp"
+                    android:textSize="11sp"
                     android:clickable="false"
                     android:id="@+id/duration"
                     android:textColor="@color/white"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="4dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/azure"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/genre"
+                    app:layout_constraintEnd_toStartOf="@id/presale"
+                    app:layout_constraintTop_toBottomOf="@id/distributor_name"
+                    />
+
+                <com.google.android.material.chip.Chip
+                    android:text="Pré-venda"
+                    android:textSize="11sp"
+                    android:clickable="false"
+                    android:id="@+id/presale"
+                    android:visibility="gone"
+                    android:textColor="@color/white"
+                    android:layout_marginStart="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/black_gray"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/duration"
                     app:layout_constraintTop_toBottomOf="@id/distributor_name"
                     />
 
