--- a/app/src/main/res/layout/movie_details.xml
+++ b/app/src/main/res/layout/movie_details.xml
@@ -12,6 +12,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/name"
+                android:padding="8dp"
+                android:textSize="22sp"
+                android:layout_width="0dp"
+                android:text="Nome do Filme"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/white"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                />
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/card"
                 android:layout_margin="16dp"
@@ -20,7 +35,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/name"
                 app:layout_constraintStart_toStartOf="parent">
 
                 <ImageView
@@ -36,8 +51,8 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
-                android:id="@+id/movie_name"
-                android:text="Nome do Filme"
+                android:id="@+id/date"
+                android:text="99/99/9999"
                 android:padding="8dp"
                 android:maxLines="2"
                 android:ellipsize="end"
@@ -61,8 +76,8 @@
                 android:layout_height="80dp"
                 android:src="@drawable/star_border_24"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/card"
+                app:layout_constraintTop_toBottomOf="@id/name"
                 app:backgroundTint="@color/star_selected_unselected"
                 />
 
@@ -107,7 +122,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/movie_name"
+                app:layout_constraintTop_toBottomOf="@id/date"
                 />
 
             <TextView
@@ -127,11 +142,12 @@
             <TextView
                 android:text="Diretor: "
                 android:id="@+id/director"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:layout_width="0dp"
                 android:paddingVertical="8dp"
                 android:paddingHorizontal="16dp"
                 android:textColor="@color/white"
+                android:gravity="center_horizontal"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -142,11 +158,12 @@
             <TextView
                 android:text="Cidade: "
                 android:id="@+id/city"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:layout_width="0dp"
                 android:paddingVertical="8dp"
                 android:paddingHorizontal="16dp"
                 android:textColor="@color/white"
+                android:gravity="center_horizontal"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -155,18 +172,34 @@
                 />
 
             <TextView
-                android:text="Classificação indicativa: "
-                android:id="@+id/content_rating"
-                android:textSize="15sp"
+                android:text="Distribuidor: "
+                android:id="@+id/distributor"
+                android:textSize="18sp"
                 android:layout_width="0dp"
                 android:paddingVertical="8dp"
                 android:paddingHorizontal="16dp"
                 android:textColor="@color/white"
+                android:gravity="center_horizontal"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/city"
+                />
+
+            <TextView
+                android:text="Classificação indicativa: "
+                android:id="@+id/content_rating"
+                android:textSize="18sp"
+                android:layout_width="0dp"
+                android:paddingVertical="8dp"
+                android:paddingHorizontal="16dp"
+                android:textColor="@color/white"
+                android:gravity="center_horizontal"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/distributor"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
